--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.0.0",
     "@babel/plugin-syntax-jsx": "^7.22.5",
     "@babel/preset-react": "^7.22.5",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -50,6 +48,10 @@
     ]
   },
   "devDependencies": {
-    "eslint-plugin-react-refresh": "^0.4.3"
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "eslint-plugin-jest": "^27.2.3",
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "jest": "^27.5.1"
   }
 }
